# lexify

./: .gitignore  Cargo.toml  Makefile  README.md
.circleci/: config.yml
.github/workflows/: deploy-api.yml  firebase-hosting-pull-request.yml  run-tests.yml
apps/server/: .dockerignore  Cargo.toml  Dockerfile  rustfmt.toml
apps/server/migrations/2022-07-26-154905_alter_initial_tables/: down.sql
apps/server/migrations/2022-09-04-061645_update_tables/: up.sql
apps/server/migrations/2022-09-11-070225_set_secodary_ids_to_not_null/: up.sql
apps/server/migrations/2022-09-25-162914_add_priority_to_word/: down.sql  up.sql
apps/server/migrations/2022-10-16-041352_add_priority_again/: down.sql
apps/server/src/: db.rs  errors.rs  extractor.rs  http_error.rs  lib.rs  main.rs  protocol.rs  rocket_launch.rs
apps/server/src/api/: collection.rs  mod.rs  user.rs  users.rs  vocab_word.rs
apps/server/src/db/: mod.rs
apps/server/tests/: test_collection.rs  test_user.rs  test_vocab_word.rs
apps/server/tests/common/: calls.rs  mocks.rs  utils.rs
apps/web/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/components/: OAuthSocialsBox.tsx  (+1 more)
backend/: .dockerignore  .env.test  Cargo.toml  docker-compose.yml  how_i_solved_it.md
backend/migrations/: migrate.sql
backend/migrations/2022-07-16-025025_init_schema/: down.sql  up.sql
backend/migrations/2022-07-26-154905_alter_initial_tables/: up.sql
backend/migrations/2022-09-11-070225_set_secodary_ids_to_not_null/: down.sql
backend/migrations/2022-09-25-162914_add_priority_to_word/: up.sql
backend/migrations/2022-10-16-041352_add_priority_again/: up.sql
backend/migrations/2022-10-16-041556_make_priority_not_null/: up.sql
backend/migrations/2022-10-22-054342_add_priority_to_collections/: down.sql  up.sql
backend/scripts/: init_db.sh
backend/src/: lib.rs  main.rs  rocket_launch.rs  schema.rs
backend/src/api/: collection.rs  mod.rs  user.rs  vocab_word.rs
backend/src/auth/: firebase_auth.rs  firebase_config.rs  jwk.rs  jwt.rs  jwt_config.rs  mod.rs
backend/src/db/: collection.rs  mod.rs  mysql.rs  schema.rs  user.rs  vocab_word.rs
backend/src/storage/: mysql.rs  schema.rs
backend/tests/: setup.rs
backend/tests/api/: collection.rs  main.rs  mocks.rs  user.rs  utils.rs  vocab_word.rs
core/: Cargo.toml  Dockerfile
core/src/: main.rs
core/src/db/: collection.rs
core/tests/: test_collection.rs  test_user.rs  test_vocab_word.rs
core/tests/common/: calls.rs  utils.rs
frontend/: .eslintignore  .eslintrc.json  .firebaserc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  ProtectedRoute.tsx  env.d.ts  main.tsx  utils.ts
frontend/src/api/: collection.ts  types.ts  user.ts  utils.ts  vocabWord.ts
frontend/src/components/: AddVocabWordCard.tsx  CTAButton.tsx  CollectionEditor.tsx  Drawer.tsx  EditableTypography.tsx  FlipCard.tsx  Header.tsx  OAuthSocialsBox.tsx  PreAuthHeader.tsx  RippleCircle.tsx  VocabCardsContainer.tsx  VocabWordCard.tsx  VocabWordCardBase.tsx
frontend/src/config/: firebase.ts
frontend/src/contexts/: AppStateContext.tsx  AuthContext.tsx
frontend/src/domain/: collection.ts  types.ts  vocabWord.ts
frontend/src/hooks/: useCollection.tsx  useLocalStorage.tsx  useVocabWord.tsx
frontend/src/pages/: Account.tsx  Collections.tsx  Home.tsx  Landing.tsx  Loading.tsx  Login.tsx  Signup.tsx
frontend/src/state/: collectionsState.ts  pageState.ts  vocabCardState.ts  vocabWords.ts  vocabWordsState.ts
frontend/src/types/: Collection.ts  VocabWord.ts
lexify-rocket-api/: Cargo.toml  Dockerfile
lexify-rocket-api/src/: main.rs
lexify-rocket-api/tests/: test_collection.rs  test_user.rs  test_vocab_word.rs
lexify-rocket-api/tests/common/: calls.rs  utils.rs
prisma/: schema.prisma
web/: .gitignore
web/src/components/: Header.tsx  VocabCardsContainer.tsx
web/src/config/: axios.ts
web/src/domain/: collection.ts
web/src/hooks/: useLocalStorage.tsx
web/src/pages/: Signup.tsx
web/src/types/: Sides.ts
(+27 files in other folders)
