[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serde = "1.0.138"
serde_json = "1.0.82"
tokio = "1.19.2"
futures = "0.3.21"
log = "0.4.17"
uuid = "1.1.2"
jsonwebtoken = "8.1.1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = [
    "json"
]

[dependencies.rocket_sync_db_pools]
rocket_sync_db_pools = "0.1.0-rc.2"
features = [
    "diesel_mysql_pool",
]

[dependencies.diesel]
version = "1.4.8"
features = [
    "mysql",
    "chrono"
]
