[package]
name = "lexify-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "lexify-api"

[dependencies]
dotenv = "0.15.0"
serde = "1.0.138"
serde_json = "1.0.82"
tokio = "1.19.2"
futures = "0.3.21"
log = "0.4.17"
uuid = "1.1.2"
jsonwebtoken = "8.1.1"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "54fae0701dffbe5df686465780218644ee3fae5f" }
diesel = { version = "1.4.8", features = ["r2d2", "mysql", "chrono"] }
reqwest = { version = "0.11.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }

[dev-dependencies]
wiremock = "0.5.14"
bincode = "1.3.3"