[package]
name = "lexify-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "lexify-server"

[dependencies]
dotenvy = "0.15.6"
serde = "1.0.147"
serde_json = "1.0.87"
futures = "0.3.25"
tracing = "0.1.37"
rocket_firebase_auth = "0.2.4"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "54fae0701dffbe5df686465780218644ee3fae5f" }
diesel = { version = "2.0.2", features = ["r2d2", "mysql", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }

[dev-dependencies]
tokio = "1.21.2"
bincode = "1.3.3"
wiremock = "0.5.15"
once_cell = "1.16.0"
rocket_firebase_auth = { version = "0.2.4", features = ["env", "encode"] }
