[package]
name = "lexify-server"
version = "0.1.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "lexify-server"

[dependencies]
prisma-client-rust = { workspace = true }
prisma-client-rust-cli = { workspace = true }

dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
axum = { version = "0.6", features = ["headers"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
rocket_firebase_auth = { path = "../../../firebase-authenator" }

[dev-dependencies]
wiremock = "0.5.17"
once_cell = "1.17.1"
